fix: popup editor on dropdowns are too narrow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -717,7 +717,7 @@ a {
 }
 
 .ag-popup-editor {
-    width: 150px;
+    width: 260px;
 }
 
 
